@@ -8,6 +8,9 @@ GNU grep NEWS                                    -*- outline -*-
   mishandles patterns like [^a] in locales that have multicharacter
   collating sequences so that [^a] can match a string of two characters.
 
+  grep no longer mishandles an empty pattern at the end of a pattern list.
+  [bug introduced in grep-2.5]
+
   grep -P now works with -w and -x and backreferences. Before,
   echo aa|grep -Pw '(.)\1' would fail to match, yet
   echo aa|grep -Pw '(.)\2' would match.
